Görseller eklendi - profil ve banner

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="about-grid">
                 <div class="about-image">
-                    <img src="https://via.placeholder.com/500x600/1a1a2e/d4af37?text=Quiet+Wealth" alt="Quiet Wealth">
+                    <img src="images/profil.png" alt="Quiet Wealth">
                 </div>
                 <div class="about-text">
                     <h2>Merhaba, Ben <span class="gold-text">Quiet Wealth</span></h2>
