--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
                 <!-- Blog Card 1 -->
                 <article class="blog-card">
                     <div class="blog-card-image">
-                        <img src="https://via.placeholder.com/400x250/1a1a2e/d4af37?text=Borsa+Analizi" alt="Borsa Analizi">
+                        <img src="images/banner.jpg" alt="Borsa Analizi">
                     </div>
                     <div class="blog-card-content">
                         <div class="blog-card-meta">
@@ -62,7 +62,7 @@
                 <!-- Blog Card 2 -->
                 <article class="blog-card">
                     <div class="blog-card-image">
-                        <img src="https://via.placeholder.com/400x250/1a1a2e/d4af37?text=Bitcoin" alt="Bitcoin Analizi">
+                        <img src="images/banner.jpg" alt="Bitcoin Analizi">
                     </div>
                     <div class="blog-card-content">
                         <div class="blog-card-meta">
@@ -77,7 +77,7 @@
                 <!-- Blog Card 3 -->
                 <article class="blog-card">
                     <div class="blog-card-image">
-                        <img src="https://via.placeholder.com/400x250/1a1a2e/d4af37?text=Yatirim" alt="Yatırım Stratejisi">
+                        <img src="images/banner.jpg" alt="Yatırım Stratejisi">
                     </div>
                     <div class="blog-card-content">
                         <div class="blog-card-meta">
@@ -92,7 +92,7 @@
                 <!-- Blog Card 4 -->
                 <article class="blog-card">
                     <div class="blog-card-image">
-                        <img src="https://via.placeholder.com/400x250/1a1a2e/d4af37?text=Teknik+Analiz" alt="Teknik Analiz">
+                        <img src="images/banner.jpg" alt="Teknik Analiz">
                     </div>
                     <div class="blog-card-content">
                         <div class="blog-card-meta">
@@ -107,7 +107,7 @@
                 <!-- Blog Card 5 -->
                 <article class="blog-card">
                     <div class="blog-card-image">
-                        <img src="https://via.placeholder.com/400x250/1a1a2e/d4af37?text=Altcoin" alt="Altcoin Analizi">
+                        <img src="images/banner.jpg" alt="Altcoin Analizi">
                     </div>
                     <div class="blog-card-content">
                         <div class="blog-card-meta">
@@ -122,7 +122,7 @@
                 <!-- Blog Card 6 -->
                 <article class="blog-card">
                     <div class="blog-card-image">
-                        <img src="https://via.placeholder.com/400x250/1a1a2e/d4af37?text=Risk" alt="Risk Yönetimi">
+                        <img src="images/banner.jpg" alt="Risk Yönetimi">
                     </div>
                     <div class="blog-card-content">
                         <div class="blog-card-meta">
