--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="videos-grid">
                 <div class="video-card">
                     <div class="video-thumbnail">
-                        <img src="https://via.placeholder.com/400x225/1a1a2e/d4af37?text=Video+1" alt="Video Thumbnail">
+                        <img src="images/banner.jpg" alt="Video Thumbnail">
                         <div class="play-button">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <polygon points="5,3 19,12 5,21"></polygon>
@@ -121,7 +121,7 @@
                 </div>
                 <div class="video-card">
                     <div class="video-thumbnail">
-                        <img src="https://via.placeholder.com/400x225/1a1a2e/d4af37?text=Video+2" alt="Video Thumbnail">
+                        <img src="images/banner.jpg" alt="Video Thumbnail">
                         <div class="play-button">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <polygon points="5,3 19,12 5,21"></polygon>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="video-card">
                     <div class="video-thumbnail">
-                        <img src="https://via.placeholder.com/400x225/1a1a2e/d4af37?text=Video+3" alt="Video Thumbnail">
+                        <img src="images/banner.jpg" alt="Video Thumbnail">
                         <div class="play-button">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <polygon points="5,3 19,12 5,21"></polygon>
