--- a/videos.html
+++ b/videos.html
@@ -47,7 +47,7 @@
                 <!-- Video Card 1 -->
                 <a href="https://www.youtube.com/@QUIETWEALTH34" target="_blank" class="video-card">
                     <div class="video-thumbnail">
-                        <img src="https://via.placeholder.com/400x225/1a1a2e/d4af37?text=Haftalik+Analiz" alt="Haftalık Piyasa Analizi">
+                        <img src="images/banner.jpg" alt="Haftalık Piyasa Analizi">
                         <div class="play-button">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <polygon points="5,3 19,12 5,21"></polygon>
@@ -61,7 +61,7 @@
                 <!-- Video Card 2 -->
                 <a href="https://www.youtube.com/@QUIETWEALTH34" target="_blank" class="video-card">
                     <div class="video-thumbnail">
-                        <img src="https://via.placeholder.com/400x225/1a1a2e/d4af37?text=Bitcoin+Analiz" alt="Bitcoin Teknik Analiz">
+                        <img src="images/banner.jpg" alt="Bitcoin Teknik Analiz">
                         <div class="play-button">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <polygon points="5,3 19,12 5,21"></polygon>
@@ -75,7 +75,7 @@
                 <!-- Video Card 3 -->
                 <a href="https://www.youtube.com/@QUIETWEALTH34" target="_blank" class="video-card">
                     <div class="video-thumbnail">
-                        <img src="https://via.placeholder.com/400x225/1a1a2e/d4af37?text=Hisse+Secimi" alt="Hisse Senedi Seçimi">
+                        <img src="images/banner.jpg" alt="Hisse Senedi Seçimi">
                         <div class="play-button">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <polygon points="5,3 19,12 5,21"></polygon>
@@ -89,7 +89,7 @@
                 <!-- Video Card 4 -->
                 <a href="https://www.youtube.com/@QUIETWEALTH34" target="_blank" class="video-card">
                     <div class="video-thumbnail">
-                        <img src="https://via.placeholder.com/400x225/1a1a2e/d4af37?text=BIST+100" alt="BIST 100 Analizi">
+                        <img src="images/banner.jpg" alt="BIST 100 Analizi">
                         <div class="play-button">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <polygon points="5,3 19,12 5,21"></polygon>
@@ -103,7 +103,7 @@
                 <!-- Video Card 5 -->
                 <a href="https://www.youtube.com/@QUIETWEALTH34" target="_blank" class="video-card">
                     <div class="video-thumbnail">
-                        <img src="https://via.placeholder.com/400x225/1a1a2e/d4af37?text=Altcoin" alt="Altcoin Analizi">
+                        <img src="images/banner.jpg" alt="Altcoin Analizi">
                         <div class="play-button">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <polygon points="5,3 19,12 5,21"></polygon>
@@ -117,7 +117,7 @@
                 <!-- Video Card 6 -->
                 <a href="https://www.youtube.com/@QUIETWEALTH34" target="_blank" class="video-card">
                     <div class="video-thumbnail">
-                        <img src="https://via.placeholder.com/400x225/1a1a2e/d4af37?text=Egitim" alt="Yatırım Eğitimi">
+                        <img src="images/banner.jpg" alt="Yatırım Eğitimi">
                         <div class="play-button">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <polygon points="5,3 19,12 5,21"></polygon>
@@ -131,7 +131,7 @@
                 <!-- Video Card 7 -->
                 <a href="https://www.youtube.com/@QUIETWEALTH34" target="_blank" class="video-card">
                     <div class="video-thumbnail">
-                        <img src="https://via.placeholder.com/400x225/1a1a2e/d4af37?text=Risk+Yonetimi" alt="Risk Yönetimi">
+                        <img src="images/banner.jpg" alt="Risk Yönetimi">
                         <div class="play-button">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <polygon points="5,3 19,12 5,21"></polygon>
@@ -145,7 +145,7 @@
                 <!-- Video Card 8 -->
                 <a href="https://www.youtube.com/@QUIETWEALTH34" target="_blank" class="video-card">
                     <div class="video-thumbnail">
-                        <img src="https://via.placeholder.com/400x225/1a1a2e/d4af37?text=Canli+Yayin" alt="Canlı Yayın">
+                        <img src="images/banner.jpg" alt="Canlı Yayın">
                         <div class="play-button">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <polygon points="5,3 19,12 5,21"></polygon>
@@ -159,7 +159,7 @@
                 <!-- Video Card 9 -->
                 <a href="https://www.youtube.com/@QUIETWEALTH34" target="_blank" class="video-card">
                     <div class="video-thumbnail">
-                        <img src="https://via.placeholder.com/400x225/1a1a2e/d4af37?text=Portfoy" alt="Portföy Yönetimi">
+                        <img src="images/banner.jpg" alt="Portföy Yönetimi">
                         <div class="play-button">
                             <svg viewBox="0 0 24 24" fill="currentColor">
                                 <polygon points="5,3 19,12 5,21"></polygon>
